# rebalancing-trading-bot

./: .gitignore  Dockerfile  Project_starting_initialization.txt  README.md  docker-compose.yml  oldFILE_DOCK  pyproject.toml
.github/workflows/: ci.yml
src/rebalancing_bot/: __main__.py  main.py
