[project]
name = "rebalancing-bot"
version = "0.1.0"
description = "Dynamic crypto rebalancing bot with MQTT and Redis support"
authors = [
    {name = "harikrishna2005@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "mqtt-connector-lib @ git+https://github.com/harikrishna2005/mqtt_connector_lib.git@redis_connector_develop"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
